# BarrelField3D

./: README.md
AverageBarrelField/: CMakeLists.txt
AverageBarrelField/.kdev4/: AverageBarrelField.kdev4
AverageBarrelField/src/: axis_vectorfield.cpp  main.cpp  registration.cpp  registration.h
AverageSurfaces/: CMakeLists.txt
AverageSurfaces/.kdev4/: AverageSurfaces.kdev4
AverageSurfaces/src/: avg_surfaces.cpp
CelltypeClassifier/: single_neuron_assignment_exc.py
CelltypeClassifier/ground_truth_exc/: L2_unambiguous_cluster.csv  L3_4_unambiguous_cluster.csv  L3_unambiguous_cluster.csv  L4_3_unambiguous_cluster.csv  L4py_unambiguous_cluster.csv  L4sp-py_unambiguous_cluster.csv  L4sp2_unambiguous_cluster.csv  L4ss_unambiguous_cluster.csv  L5st_unambiguous_cluster.csv  L5tt_unambiguous_cluster.csv  L6cc_unambiguous_cluster.csv  L6ct_unambiguous_cluster.csv
Connectome/: .project  .pydevproject  CMakeLists.txt  computeInnervation.py  convergencePerCTPerColumn.py  map_singlecell_inputs.py  map_singlecell_inputs_invitro.py  synapsesPerCTPerColumn.py  synapsesPerCTPerColumn_output.py  synapsesPerCTPerColumn_visualizations.py
Connectome/.kdev4/: Connectome.kdev4
Connectome/connectome_analysis/: __init__.py  celltable.py  reader.py
Connectome/src/: connectionMatrixVisualization.cpp  generateTestRealization.cpp  generateTruncatedCell.cpp  innervationHistogram.cpp  matrixanalyzer.cpp  matrixanalyzer.h  moveAxonsSimple.cpp  singleneuronmain.cpp  sortConnectionMatrix.cpp  synapsesAnalysis.cpp  synapsesPerCellAnalysis.cpp  tripletMotifHistogram.cpp  uniqueConnectionMatrixRows.cpp
CortexCoordinates/: CMakeLists.txt
CortexCoordinates/.kdev4/: CortexCoordinates.kdev4
CortexCoordinates/src/: axis_vectors.cpp  geometry.cpp  geometry.h  main.cpp  surfaces.cpp
DataAnalysis3D/: CMakeLists.txt
DataAnalysis3D/.kdev4/: DataAnalysis3D.kdev4
DataAnalysis3D/cellcnt_src/: barreloidsurfacereconstruct.cpp  bf_recon_pipeline.cpp  cortexreconstruction.h  cortexsurfacereconstruct.h  landmarkanalyzer.h  landmarkregistration.h  pipeline.cpp  vpmreconstruction.cpp  vpmreconstruction.h
DataAnalysis3D/cellcnt_src/.svn/: all-wcprops  entries
DataAnalysis3D/cellcnt_src/.svn/text-base/: barreloidsurfacereconstruct.h.svn-base  cortexreconstruction.cpp.svn-base  cortexsurfacereconstruct.cpp.svn-base  crop_landmark_file.py.svn-base  density_correction.cpp.svn-base  density_laminar_visualization.cpp.svn-base  laminar_count.cpp.svn-base  landmarkanalyzer.cpp.svn-base  landmarkregistration.cpp.svn-base  register_barrelfield.cpp.svn-base  vessel_recon.cpp.svn-base  volume_count.cpp.svn-base  vpm_pipeline.cpp.svn-base
DataAnalysis3D/morph_src/: INFeatureMain.cpp  axonBoxAnalysis.cpp  axonNodeDistribution.cpp  axon_line_profile.cpp  axon_obj_to_spatialgraph.cpp  branchLengthDistance.cpp  densityInVolume.cpp  density_column_analysis.cpp  main.cpp  wedge_analysis.cpp
DataAnalysis3D/morph_src/.svn/: all-wcprops  entries
DataAnalysis3D/morph_src/.svn/text-base/: morph_analyzer.cpp.svn-base  morph_analyzer.h.svn-base
GADVessels/: CMakeLists.txt
GADVessels/src/: bloodvesselpattern.cpp  bloodvesselpattern.h  segmentation.cpp  typedefs.h
HVCRegistration/src/: average_hvc.cpp  delay_axon_map.cpp  hvc_innervation_by_sample.cpp  hvc_registration.cpp  hvcreconstruction.cpp  hvcreconstruction.h  pairwise_soma_distances.cpp  postsynaptic_input_timing.cpp
NeuroRegistration/: CMakeLists.txt  NeuroControl.py
NeuroRegistration/.kdev4/: NeuroRegistration.kdev4
NeuroRegistration/NeuroMap_manual/: AllCells4Database_V2.xlsx  NeuroMapInstallation.txt  NeuroMap_manual_v1.docx  NeuroMap_reg_list.txt
NeuroRegistration/src/: l1_reg.cpp  landmark_reg.cpp  main.cpp  morph_reg.cpp  morph_reg.h  utilities.cpp  utilities.h
SurfaceExtraction/: CMakeLists.txt
SurfaceExtraction/.kdev4/: SurfaceExtraction.kdev4
SurfaceExtraction/src/: amiraReader.cpp  amiraReader.h  basics.cpp  basics.h  bloodvesselpattern.cpp  bloodvesselpattern.h  section.cpp  section.h  segmentation.cpp  segmentation.h  spatialGraph.cpp  spatialGraph.h  surface_extract.cpp  typedefs.h
common/: amiraReader.cpp  amiraReader.h  average_barrel_field_L4Lower_complete_S1.surf  average_barrel_field_L4Upper_complete_S1.surf  average_barrel_field_S1_convex_hull.surf  average_barrel_field_WM_complete_S1.surf  average_barrel_field_complete_S1.am  average_barrel_field_pia_complete_S1.surf  barrel_field.cpp  barrel_field.h  basics.cpp  basics.h  inputcheckpoint.cpp  inputcheckpoint.h  inputparameters.cpp  inputparameters.h  profile.cpp  profile.h  surface3dreconstruct.cpp  surface3dreconstruct.h  typedefs.h
landmark_tools/: CMakeLists.txt  converter.cpp  joinCommonLandmarks.cpp  landmark_correspondence.cpp  tripleLabelingAnalysis.cpp
landmark_tools/.kdev4/: landmark_tools.kdev4
