cmake_minimum_required(VERSION 2.6)

# This project is designed to be built outside the Insight source tree.
PROJECT(DataAnalysis3D)

#CMake Optimizing
#SET(CMAKE_BUILD_TYPE Release )
#SET(CMAKE_CXX_FLAGS_Release "-O2")
#SET(CMAKE_C_FLAGS_Release "-O2")

# Find ITK.
FIND_PACKAGE(ITK)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
  MESSAGE(FATAL_ERROR
          "Cannot build without ITK.  Please set ITK_DIR.")
ENDIF(ITK_FOUND)

# Find VTK
# INCLUDE(${CMAKE_ROOT}/Modules/FindVTK.cmake)
# IF(USE_VTK_FILE)
#   INCLUDE(${USE_VTK_FILE})
# ELSE(USE_VTK_FILE)
#   MESSAGE(FATAL_ERROR
#           "Cannot build without VTK.  Please set VTK_DIR.")
# ENDIF(USE_VTK_FILE)
FIND_PACKAGE(VTK)
IF(VTK_USE_FILE)
  INCLUDE(${VTK_USE_FILE})
ELSE(VTK_USE_FILE)
  MESSAGE(FATAL_ERROR
          "Cannot build without VTK.  Please set VTK_DIR.")
ENDIF(VTK_USE_FILE)

#Find GSL
INCLUDE(${CMAKE_ROOT}/Modules/FindGSL.cmake)
FIND_PACKAGE(GSL REQUIRED)

#LINK_LIBRARIES(ITKBasicFilters ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkHybrid)

#CMake Optimizing
SET(CMAKE_BUILD_TYPE RELEASE )
SET(CMAKE_CXX_FLAGS_DEBUG "-g -wd1268")
SET(CMAKE_C_FLAGS_DEBUG "-g")
#SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -openmp")
#SET(CMAKE_C_FLAGS_RELEASE "-O3 -openmp")
SET(CMAKE_VERBOSE_MAKEFILE "TRUE")

#Sources
# INCLUDE_DIRECTORIES(src)
INCLUDE_DIRECTORIES(src ${GSL_INCLUDE_DIRS} ${GSLCBLAS_INCLUDE_DIRS})

SET(CommonSources ../common/typedefs.h ../common/basics.h ../common/basics.cpp ../common/barrel_field.h ../common/barrel_field.cpp ../common/amiraReader.h ../common/amiraReader.cpp ../common/profile.h ../common/profile.cpp ../common/inputcheckpoint.h ../common/inputcheckpoint.cpp ../common/inputparameters.h ../common/inputparameters.cpp)
SET(MorphSrc morph_src/main.cpp morph_src/morph_analyzer.h morph_src/morph_analyzer.cpp)
SET(DensityColumnSrc morph_src/density_column_analysis.cpp)
SET(CellcntSrc cellcnt_src/pipeline.cpp cellcnt_src/cortexreconstruction.h cellcnt_src/cortexreconstruction.cpp cellcnt_src/landmarkregistration.h cellcnt_src/landmarkregistration.cpp cellcnt_src/landmarkanalyzer.h cellcnt_src/landmarkanalyzer.cpp ../common/surface3dreconstruct.h ../common/surface3dreconstruct.cpp cellcnt_src/cortexsurfacereconstruct.h cellcnt_src/cortexsurfacereconstruct.cpp)
SET(VolumecntSrc cellcnt_src/volume_count.cpp cellcnt_src/cortexreconstruction.h cellcnt_src/cortexreconstruction.cpp cellcnt_src/landmarkanalyzer.h cellcnt_src/landmarkanalyzer.cpp ../common/surface3dreconstruct.h ../common/surface3dreconstruct.cpp cellcnt_src/cortexsurfacereconstruct.h cellcnt_src/cortexsurfacereconstruct.cpp)
SET(LaminarcntSrc cellcnt_src/laminar_count.cpp cellcnt_src/cortexreconstruction.h cellcnt_src/cortexreconstruction.cpp cellcnt_src/landmarkanalyzer.h cellcnt_src/landmarkanalyzer.cpp ../common/surface3dreconstruct.h ../common/surface3dreconstruct.cpp cellcnt_src/cortexsurfacereconstruct.h cellcnt_src/cortexsurfacereconstruct.cpp)
SET(VPMcntSrc cellcnt_src/vpm_pipeline.cpp cellcnt_src/vpmreconstruction.h cellcnt_src/vpmreconstruction.cpp cellcnt_src/landmarkanalyzer.h cellcnt_src/landmarkanalyzer.cpp ../common/surface3dreconstruct.h ../common/surface3dreconstruct.cpp cellcnt_src/barreloidsurfacereconstruct.h cellcnt_src/barreloidsurfacereconstruct.cpp)
SET(INCorrectSrc cellcnt_src/density_correction.cpp cellcnt_src/landmarkanalyzer.h cellcnt_src/landmarkanalyzer.cpp)
SET(DensityVisSrc cellcnt_src/density_laminar_visualization.cpp cellcnt_src/landmarkanalyzer.h cellcnt_src/landmarkanalyzer.cpp)
SET(RegBFSrc cellcnt_src/register_barrelfield.cpp cellcnt_src/landmarkregistration.h cellcnt_src/landmarkregistration.cpp)
SET(BFReconSrc cellcnt_src/bf_recon_pipeline.cpp cellcnt_src/cortexreconstruction.h cellcnt_src/cortexreconstruction.cpp ../common/surface3dreconstruct.h ../common/surface3dreconstruct.cpp cellcnt_src/cortexsurfacereconstruct.h cellcnt_src/cortexsurfacereconstruct.cpp)
SET(VesselReconSrc cellcnt_src/vessel_recon.cpp cellcnt_src/cortexreconstruction.h cellcnt_src/cortexreconstruction.cpp  cellcnt_src/landmarkregistration.h cellcnt_src/landmarkregistration.cpp ../common/surface3dreconstruct.h ../common/surface3dreconstruct.cpp cellcnt_src/cortexsurfacereconstruct.h cellcnt_src/cortexsurfacereconstruct.cpp)
SET(INFeatureExtractorSrc morph_src/INFeatureMain.cpp morph_src/morph_analyzer.h morph_src/morph_analyzer.cpp)
SET(AxonBranchLengthDistanceSrc morph_src/branchLengthDistance.cpp)
SET(AxonBoxAnalysisSrc morph_src/axonBoxAnalysis.cpp)
SET(AxonNodeDistributionSrc morph_src/axonNodeDistribution.cpp)
SET(DensityInVolumeSrc morph_src/densityInVolume.cpp)
SET(AxonWedgeAnalysisSrc morph_src/wedge_analysis.cpp)
SET(AxonLineProfileSrc morph_src/axon_line_profile.cpp)
SET(AxonConverterSrc morph_src/axon_obj_to_spatialgraph.cpp)


ADD_EXECUTABLE(MorphAnalysis ${MorphSrc} ${CommonSources})
ADD_EXECUTABLE(DensityColumnAnalysis ${DensityColumnSrc} ${CommonSources})
ADD_EXECUTABLE(NeuroCountAnalysis ${CellcntSrc} ${CommonSources})
ADD_EXECUTABLE(VolumeCountAnalysis ${VolumecntSrc} ${CommonSources})
ADD_EXECUTABLE(LaminarCountAnalysis ${LaminarcntSrc} ${CommonSources})
ADD_EXECUTABLE(VPMCountAnalysis ${VPMcntSrc} ${CommonSources})
ADD_EXECUTABLE(DensityCorrection ${INCorrectSrc} ${CommonSources})
ADD_EXECUTABLE(DensityVisualization ${DensityVisSrc} ${CommonSources})
ADD_EXECUTABLE(RegisterBarrelfield ${RegBFSrc} ${CommonSources})
ADD_EXECUTABLE(BF3DRecon ${BFReconSrc} ${CommonSources})
ADD_EXECUTABLE(Vessel3DRecon ${VesselReconSrc} ${CommonSources})
ADD_EXECUTABLE(INFeatureExtractor ${INFeatureExtractorSrc} ${CommonSources})
ADD_EXECUTABLE(AxonBranchLengthDistance ${AxonBranchLengthDistanceSrc} ${CommonSources})
ADD_EXECUTABLE(AxonBoxAnalysis ${AxonBoxAnalysisSrc} ${CommonSources})
ADD_EXECUTABLE(AxonNodeDistribution ${AxonNodeDistributionSrc} ${CommonSources})
ADD_EXECUTABLE(DensityInVolume ${DensityInVolumeSrc} ${CommonSources})
ADD_EXECUTABLE(AxonWedgeAnalysis ${AxonWedgeAnalysisSrc} ${CommonSources})
ADD_EXECUTABLE(AxonLineProfile ${AxonLineProfileSrc} ${CommonSources})
ADD_EXECUTABLE(AxonConverter ${AxonConverterSrc} ${CommonSources})


TARGET_LINK_LIBRARIES(MorphAnalysis ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(MorphAnalysis PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(DensityColumnAnalysis ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(DensityColumnAnalysis PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(NeuroCountAnalysis ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(NeuroCountAnalysis PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(VolumeCountAnalysis ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(VolumeCountAnalysis PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(LaminarCountAnalysis ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(LaminarCountAnalysis PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(VPMCountAnalysis ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(VPMCountAnalysis PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(DensityCorrection ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(DensityCorrection PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(DensityVisualization ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(DensityVisualization PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(RegisterBarrelfield ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(RegisterBarrelfield PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(BF3DRecon ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkHybrid vtkInfovis ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(BF3DRecon PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(Vessel3DRecon ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(Vessel3DRecon PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(INFeatureExtractor ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(INFeatureExtractor PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(AxonBranchLengthDistance ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(AxonBranchLengthDistance PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(AxonBoxAnalysis ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(AxonBranchLengthDistance PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(AxonNodeDistribution ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(AxonBranchLengthDistance PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(DensityInVolume ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(AxonBranchLengthDistance PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(AxonWedgeAnalysis ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(AxonWedgeAnalysis PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(AxonLineProfile ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(AxonLineProfile PROPERTIES LINK_FLAGS "-openmp")
TARGET_LINK_LIBRARIES(AxonConverter ITKBasicFilters ITKCommon ITKIO ITKAlgorithms vtkImaging vtkFiltering vtkCommon vtkGraphics vtkIO vtkInfovis vtkHybrid ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
#SET_TARGET_PROPERTIES(AxonLineProfile PROPERTIES LINK_FLAGS "-openmp")
